# talent-plan-rs

./: .gitignore  README.md
projects/project-1/: Cargo.toml
projects/project-2/: Cargo.toml
projects/project-2/src/: error.rs  kv.rs  lib.rs
projects/project-2/tests/: tests.rs
projects/project-3/: Cargo.toml
projects/project-3/benches/: engine_bench.rs
projects/project-3/src/: error.rs  kv.rs
projects/project-3/tests/: cli.rs  kv_store.rs
