[package]
name = "kvs"
version = "0.1.0"
authors = ["Lannnnh <15997426361@sina.cn>"]
description = "A key-value store"
edition = "2021"

[dependencies]
clap = "2.32.0"
failure = "0.1.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
tempfile = "3.0.7"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
