[package]
name = "kvs"
version = "0.1.0"
authors = ["Lannnnh <15997426361@sina.cn>"]
description = "A key-value store"
edition = "2021"

[dependencies]

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "engine_bench"
harness = false